[gd_scene load_steps=6 format=3 uid="uid://lrnpmjd24u7q"]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_7dh64"]
[ext_resource type="Texture2D" uid="uid://dynleh0d0vpwl" path="res://Assets/background/game_over.png" id="2_68hux"]
[ext_resource type="Theme" uid="uid://dfi4chfjbpoa2" path="res://Prefabs/default_theme.tres" id="3_ld42g"]
[ext_resource type="FontFile" uid="uid://b211kqtlbau0p" path="res://Assets/font/m04b.TTF" id="3_o7a7n"]

[sub_resource type="LabelSettings" id="LabelSettings_57xgo"]
font = ExtResource("3_o7a7n")
font_size = 21

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_7dh64")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(120.5, 213.25)
scale = Vector2(1.00417, 1.00117)
texture = ExtResource("2_68hux")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 202.0
offset_right = 225.0
offset_bottom = 232.0
text = "GAME OVER"
label_settings = SubResource("LabelSettings_57xgo")

[node name="RESTART" type="Button" parent="."]
layout_mode = 0
offset_left = 73.0
offset_top = 257.0
offset_right = 187.0
offset_bottom = 288.0
theme = ExtResource("3_ld42g")
text = "RESTART"

[node name="QUIT" type="Button" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 320.0
offset_right = 158.0
offset_bottom = 351.0
theme = ExtResource("3_ld42g")
text = "QUIT"

[connection signal="pressed" from="RESTART" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="QUIT" to="." method="_on_quit_pressed"]
